# aiims-hrms

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HANDOFF.md  ONBOARDING.md  PROJECT_CONTEXT.md  README.md  STATUS.md  TROUBLESHOOTING.md  docker-compose.yml  fix_encoding.py  repomix-output.xml
backend/: .env.example  alembic.ini  e2e_scenarios.py_chunk  e2e_test.py  fix_workflows.py  main.py  purge_all_test_data.py  pyproject.toml  pytest.ini  query_configs.py  test_phase5_leave_balances.py  test_phase678_reports.py  test_phase8_security.py  truncate_leaves.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_auth_lockout_columns.py  0003_nodal_routing.py  1a253f58099e_add_system_settings_and_broadcasts.py  3ff2b9a5c642_add_impersonated_by_to_audit_log.py  a1b2c3d4e5f6_employee_registration_fields.py  b2c3d4e5f6a7_login_log_table.py  c3d4e5f6a7b8_deferred_items.py  d4e5f6a7b8c9_leave_application_extensions.py  e5f6a7b8c9d0_staff_number_sequences.py  f6a7b8c9d0e1_global_staff_number.py  (+10 more)
backend/app/: middleware.py
backend/docs/: btree_gist_extension.md
backend/scripts/: purge_non_test_staff.py  purge_test_data.py  purge_test_workflows.py  seed_six_month_demo.py
backend/seeds/: demo_data.py  purge_dev_data.py  run.py
backend/tests/: conftest.py  e2e_test.py  helpers.py
backend/tools/: append_chunk.py  constraint_audit.py  debug_query.py  debug_query2.py  ensure_e2e_users.py  fix_schema.py  query_configs.py  reorder.py  reorder2.py  reorder3.py  reset_test_state.py  smoke_http.py  test_resolver.py  verify_config_guards.py
(+259 files in other folders)
